Added clicker game

--- a/week_5.1/index.html
+++ b/week_5.1/index.html
@@ -36,6 +36,10 @@
 
         </div>
 
+        <div class="">
+            <a href="./clicker.html">Clicker</a>
+        </div>
+
         <script src="./js/main.js" charset="utf-8"></script>
     </body>
 </html>
